# scientific-sensor-noise-lab

./: main.py  pyproject.toml
notebooks/: noise exploration.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
src/: noise.py
